# drf-json-api-atomic-operations

./: .readthedocs.yaml  CHANGELOG.rst  LICENSE  README.md  README.rst  manage.py  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  quality_assurance.yml
.requirements/: base.txt  dev.txt  docs.txt
atomic_operations/: __init__.py  consts.py  exceptions.py  parsers.py  renderers.py  views.py
atomic_operations/locale/de/LC_MESSAGES/: django.po
docs/source/: conf.py  development.rst  docstrings.rst  index.rst  install.rst  usage.rst
drf_json_api_atomic_operation/: parsers.py  views.py
drf_json_api_atomic_operations/: parsers.py  renderers.py  types.py  views.py
tests/: models.py  serializers.py  settings.py  test_parsers.py  test_views.py  urls.py  views.py
