[metadata]
name = drf-json-api-atomic-operations
package = atomic_operations
description = Extension for `django-rest-framework-json-api <https://github.com/django-json-api/django-rest-framework-json-api>`_ to support `atomic operations <https://jsonapi.org/ext/atomic/>`_.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Jonas Kiefer
author_email = jonas.kiefer@live.com
url = https://github.com/jokiefer/drf-json-api-atomic-operations/
license = MIT-License
license_file = LICENSE
platforms = OS Independent
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: Internet :: WWW/HTTP
    Environment :: Web Environment
    Framework :: Django
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Django
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.extras_require]
tests =
    coverage

[options.packages.find]
exclude =
    tests
    tests.*

[flake8]
exclude = venv.toxbuilddocs
ignore = E501F841W503
max-line-length = 88
# max-complexity = 10

[isort]
profile = black
combine_as_imports = True
lines_after_imports = 2

[coverage:run]
branch = True
include =
    *atomic_operations*
omit =
    *migrations*
    *tests*
    *.tox*